[package]
name = "trolling"
version = "0.1.111111111111"
edition = "2021"
description = "trolling crate"
license = "Apache-2.0"
readme = "README.sex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0"
winapi = "0"
reqwest = "0"
